Corrected styles and added jumping to sections.

--- a/public/procedure.less
+++ b/public/procedure.less
@@ -1,32 +1,53 @@
 @choosen_color: #4591ff;
 
 .procedure {
-  @toc_width: 120px;
+  @toc_width: 150px;
 
-  margin-left: @toc_width + 20px;
+  margin-left: @toc_width;
+
+  h1 {
+    font-size: 2em;
+  }
+
+  h2 {
+    font-size: 1.5em;
+  }
+
+  h3 {
+    font-size: 1em;
+  }
 
   .message {
     border-radius: 0;
   }
 
   .toc {
-    position: fixed;
-    width:    @toc_width;
-    top:      0;
-    left:     0;
-    margin:   10px;
-    padding:  0;
+    font-size: 0.8em;
+    position:  fixed;
+    overflow:  auto;
+    width:     @toc_width;
+    height:    100%;
+    top:       0;
+    left:      0;
+    margin:    0;
+    padding:   0;
 
     li {
       list-style: none;
-      margin:  0;
+      margin:  6px 10px;
+      line-height: 1em;
       padding: 0;
     }
   }
 
   .step {
     display:       table-row;
+    border-bottom: 1px solid black;
     margin-bottom: 30px;
+  }
+
+  .index {
+    color: #ccc;
   }
 
   .active, .rest {
